# web_starter

./: .gitignore  Cargo.toml  README.md
config/: application.yaml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
web_starter/: Cargo.toml
web_starter/src/: app.rs  common.rs  database.rs  error.rs  id.rs  json.rs  latency.rs  logger.rs  main.rs  path.rs  query.rs  response.rs  serde.rs  server.rs  valid.rs  validation.rs
web_starter/src/api/: mod.rs  user.rs
web_starter/src/config/: database.rs  mod.rs  server.rs
web_starter/src/entity/: mod.rs  prelude.rs  sys_user.rs
